# seer

./: .drone.yml  .gdbinit  .gitignore  Cargo.toml  flake.nix
src/: build.rs  error.rs  fen.rs  lib.rs
src/board/: castle_rights.rs  chess_board.rs  color.rs  direction.rs  directions.rs  fen.rs  file.rs  mod.rs  move.rs  piece.rs  rank.rs  square.rs  zobrist.rs
src/board/bitboard/: error.rs  iterator.rs  mod.rs  superset.rs
src/board/chess_board/: builder.rs  error.rs  mod.rs
src/movegen/: king.rs  knight.rs  mod.rs  moves.rs  pawn.rs  rook.rs
src/movegen/magic/: magic.rs  mod.rs  moves.rs
src/movegen/naive/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  rook.rs
src/movegen/wizardry/: generation.rs  mask.rs  mod.rs
src/utils/: mod.rs  rand.rs  static_assert.rs
utils/gdb/: seer_pretty_printers.py
