[package]
name = "seer"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
random = "0.12.2"

[build-dependencies]
random = "0.12.2"

# Optimize build scripts to shorten compile times.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
